--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   app:
     build: .
@@ -8,6 +7,20 @@ services:
       - .:/app
     depends_on:
       - db
+  prometheus:
+    image: prom/prometheus:v2.47.0
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - monitoring
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+        reservations:
+          memory: 256M
   db:
     image: postgres:15
     environment:
@@ -16,6 +29,22 @@ services:
       POSTGRES_DB: notes
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  grafana:
+    image: grafana/grafana-enterprise
+    platform: linux/amd64
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - monitoring
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+    restart: unless-stopped
+
+networks:
+  monitoring:
+    driver: bridge
 
 volumes:
   postgres_data:
